kylin-display-switch (3.0.4) v101; urgency=medium

  * 注释debug语句
  * 解决：切换到不支持模式时，app未退出

 -- hebing <hebing@kylinos.cn>  Thu, 03 Dec 2020 20:51:31 +0800

kylin-display-switch (3.0.3) v101; urgency=medium

  * 增加evdev event 监听进程

 -- hebing <hebing@kylinos.cn>  Thu, 03 Dec 2020 20:51:31 +0800

kylin-display-switch (3.0.2) v100; urgency=medium

  * 解决BUG#27821，kds程序在V10.1下启动段错误，V10下正常

 -- hebing <hebing@kylinos.cn>  Thu, 03 Dec 2020 20:51:31 +0800

kylin-display-switch (3.0.1) v100; urgency=medium

  * recode used by qt

 -- hebing <hebing@kylinos.cn>  Thu, 03 Dec 2020 20:51:31 +0800

kylin-display-switch (2.0.13-1+1125) v101; urgency=medium

  * hide "control phone"

 -- hebing <hebing@kylinos.cn>  Sat, 21 Nov 2020 16:52:27 +0800

kylin-display-switch (2.0.12-1) unstable; urgency=medium

  * Fix lintian error.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Thu, 29 Oct 2020 20:12:24 +0800

kylin-display-switch (2.0.11-1) unstable; urgency=medium

  [hebing]
    * osd revision

 -- hebing <hebing@kylinos.cn>  Wed, 23 Sep 2020 17:08:19 +0800

kylin-display-switch (2.0.10-1) unstable; urgency=medium

  [hebing]
    * desktop add NoDisplay=true

 -- hebing <hebing@kylinos.cn>  Thu, 17 Sep 2020 16:24:49 +0800

kylin-display-switch (2.0.9-1) unstable; urgency=medium

  [hebing]
    * support 4k

 -- hebing <hebing@kylinos.cn>  Wed, 19 Aug 2020 08:58:53 +0800

kylin-display-switch (2.0.8-1) unstable; urgency=medium

  [hebing]
    * enable/disable key press tip

 -- hebing <hebing@kylinos.cn>  Wed, 19 Aug 2020 08:58:53 +0800

kylin-display-switch (2.0.7-1) unstable; urgency=medium

  [hebing]
    * add feature, the switch window will esc when pressed any key or click any where that outof window
    * add feature, pressed win + p the selected will continue change when the switch window is shown

 -- hebing <hebing@kylinos.cn>  Wed, 19 Aug 2020 08:58:53 +0800

kylin-display-switch (2.0.6-1) unstable; urgency=medium

  [hebing]