@@ -9,27 +9,32 @@
         <translation>系统投屏</translation>
     </message>
     <message>
-        <location filename="../../kds/widget.ui" line="82"/>
+        <location filename="../../kds/widget.ui" line="95"/>
         <source>System Screen Projection</source>
         <translation>系统投屏</translation>
     </message>
     <message>
-        <location filename="../../kds/widget.cpp" line="146"/>
+        <location filename="../../kds/widget.ui" line="126"/>
+        <source>PrimaryOutput:</source>
+        <translation>当前主屏：</translation>
+    </message>
+    <message>
+        <location filename="../../kds/widget.cpp" line="152"/>
         <source>Main Screen</source>
         <translation>仅主屏幕</translation>
     </message>
     <message>
-        <location filename="../../kds/widget.cpp" line="151"/>
+        <location filename="../../kds/widget.cpp" line="157"/>
         <source>Clone Screen</source>
         <translation>镜像屏</translation>
     </message>
     <message>
-        <location filename="../../kds/widget.cpp" line="156"/>
+        <location filename="../../kds/widget.cpp" line="162"/>
         <source>Extend Screen</source>
         <translation>扩展屏</translation>
     </message>
     <message>
-        <location filename="../../kds/widget.cpp" line="161"/>
+        <location filename="../../kds/widget.cpp" line="167"/>
         <source>Vice Screen</source>
         <translation>仅副屏幕</translation>
     </message>
